bug 343033: 5-10 second delay or hang or crash when quitting Cocoa Firefox patch: cancel background download as soon as user quits r=darin